# pyjson5

./: .gitignore  MANIFEST.in  README.md  README.rst  pylintrc  pyproject.toml  run  sample.json5  setup.py
.github/workflows/: ci.yml
benchmarks/: 64KB-min.json  LICENSE  README.md  bitly-usa-gov.json  run.py
json5/: __init__.py  __main__.py  arg_parser.py  compiled_parser_base.py  host.py  json5.g  lib.py  main.py  parser.py  test.json5  tool.py  version.py
json5/fakes/: host_fake.py
json5/tests/: coverage_test.py  json5_test.py  lib_test.py  main_test.py  tool_test.py
tests/: host_fake.py  host_test.py  lib_test.py  tool_test.py
