[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "json5"
description = "A Python implementation of the JSON5 data format."
authors = [
    {name = "Dirk Pranke", email = "dpranke@chromium.org"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.8.0"
classifiers= [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
dynamic = [ "version" ]

[project.optional-dependencies]
dev = [
    'build==1.2.2.post1',
    'coverage==7.5.4',  # last version that supports 3.8
    'mypy==1.14.1',  # last version that supports 3.8
    'pip==25.0.1',
    'pylint==3.2.7',  # last version that supports 3.8
    'ruff==0.11.2',
    'twine==6.1.0',
    'uv==0.6.11',
]

[project.urls]
Repository = "https://github.com/dpranke/pyjson5"
Issues = "https://github.com/dpranke/pyjson5/issues"
Changelog = "https://github.com/dpranke/pyjson5/blob/master/README.md"

[project.scripts]
pyjson5 = "json5.tool:main"

[tool.ruff]
include = [ "run", "*/*.py" ]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.setuptools]
packages = [ "json5" ]

[tool.setuptools.dynamic]
version = {attr = "json5.__version__"}
